--- a/css/main.css
+++ b/css/main.css
@@ -90,11 +90,11 @@
     color: rgba(245, 245, 245, 100);
 }
 input:focus {
-    border-bottom: 1px solid #1976d2 !important;
-    box-shadow: 0 0.2px 0 0 #1976d2 !important;
+    border-bottom: 1px solid #0d47a1 !important;
+    box-shadow: 0 0.2px 0 0 #0d47a1 !important;
 }
 label.active {
-    color: #1976d2 !important;
+    color: #0d47a1 !important;
 }
 
 
